<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Teeshop</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hole">Hole</string>
    <string name="fairway_hit">Fairway hit</string>
    <string name="fairway_hit_dist">Distance to hole</string>
    <string name="green_hit_checkbox">Green hit</string>
    <string name="green_hit_dist">Distance to hole</string>
    <string name="putt_count">No. of putts</string>
    <string name="action_next_hole">Next hole</string>
    <string name="action_prev_hole">Previous hole</string>
    <string name="action_round">Go to round</string>
    <string name="title_activity_round">RoundActivity</string>
    <string name="fairway_hit_short">F. hit</string>
    <string name="fairway_hit_dist_short">F. dist.</string>
    <string name="green_hit_short">G. hit</string>
    <string name="green_hit_dist_short">G. dist.</string>
    <string name="putt_count_short"># putts</string>
    <string name="save">Save</string>
    <string name="save_dialog_message">Are you sure you want to save?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_round_list">RoundListActivity</string>
    <string name="delete_dialog_message">Are you sure you want to delete this round?</string>
    <string name="title_activity_stats">StatsActivity</string>
    <string name="stats">Statistics</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="profile">Profile</string>
    <string name="par">Par</string>
    <string name="hole_distance">Hole distance</string>
    <string name="par_short">Par</string>
    <string name="hole_distance_short">H. dist.</string>
    <string name="transport_hit_dist">Distance to hole</string>
    <string name="transport_hit">Transport hit</string>
    <string name="transport_hit_short">T. hit</string>
    <string name="transport_hit_dist_short">T. dist.</string>

</resources>
