<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/round_table"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:stretchColumns="*"
    tools:context=".RoundActivity" >

    <TableRow
        android:id="@+id/round_table_header_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/hole_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hole" />

        <TextView
            android:id="@+id/fairway_hit_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fairway_hit_short" />

        <TextView
            android:id="@+id/fairway_hit_dist_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fairway_hit_dist_short" />

        <TextView
            android:id="@+id/green_hit_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/green_hit_short" />

        <TextView
            android:id="@+id/green_hit_dist_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/green_hit_dist_short" />

        <TextView
            android:id="@+id/putt_count_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/putt_count_short" />

    </TableRow>

</TableLayout>
